<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30.0dip" >

        <ImageView
            android:id="@+id/backBus"
            android:layout_width="90.0dip"
            android:layout_height="90.0dip"
            android:background="@drawable/about"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20.0dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="18.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/black"
            android:textSize="14.0sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/app_version_test"
            android:textColor="@color/black"
            android:textSize="14.0dip" />
    </LinearLayout>

    

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/about_tip_1"
            android:textColor="@color/black"
            android:textSize="12.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30.0dip"
            android:text="@string/about_tip_2"
            android:textColor="@color/black"
            android:textSize="12.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip" >

        <ImageView
            android:id="@+id/sina_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80.0dip"
            android:background="@drawable/ico_weibo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="3.0dip"
            android:layout_toRightOf="@id/sina_weibo"
            android:text="@string/weibo"
            android:textColor="@color/black"
            android:textSize="15.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip" >

        <ImageView
            android:id="@+id/qq_qun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80.0dip"
            android:background="@drawable/ico_qun"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="3.0dip"
            android:layout_toRightOf="@id/qq_qun"
            android:text="@string/qq"
            android:textColor="@color/black"
            android:textSize="15.0sp" />
    </RelativeLayout>

</LinearLayout>